# generated/swift/Sources/ChatPanel/Models/TeamsStreamEvent.swift
@@ -1,0 +1,50 @@
+//
+// TeamsStreamEvent.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+public struct TeamsStreamEvent: Sendable, Codable, Hashable {
+
+    public enum ModelType: String, Sendable, Codable, CaseIterable {
+        case hello = "hello"
+        case run = "run"
+    }
+    public var type: ModelType
+    /** On `hello`. */
+    public var at: Int64?
+    /** The run that changed. */
+    public var id: String?
+    /** True when the run left the store. */
+    public var removed: Bool?
+
+    public init(type: ModelType, at: Int64? = nil, id: String? = nil, removed: Bool? = nil) {
+        self.type = type
+        self.at = at
+        self.id = id
+        self.removed = removed
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case type
+        case at
+        case id
+        case removed
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(type, forKey: .type)
+        try container.encodeIfPresent(at, forKey: .at)
+        try container.encodeIfPresent(id, forKey: .id)
+        try container.encodeIfPresent(removed, forKey: .removed)
+    }
+}
+
+
+extension TeamsStreamEvent: Identifiable {}
